# Tunnel-OSTP

./: .gitignore  ANALYSIS_REPORT.md  CLIENTS_DETAILED_ANALYSIS.md  CODE_REVIEW_2026_06_17.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  Cross.toml  LICENSE  README.md  README.ru.md  fix_delimiter.py  refactor.py  refactor_main_1.py  refactor_main_2.py  refactor_main_3.py  refactor_main_4.py  server.json  test.json  test2.json  test_addr.rs  test_client.json  test_server.json
.github/workflows/: release.yml
docs/: banner.txt  migration_v0_3_1.md  migration_v0_3_1_ru.md
docs/en/: architecture.md  client.md  faq.md  ieee_spec.md  integrations.md  migration-v0.3.1.md  obfuscation.md  rfc_ostp.txt  server.md  specification.md
docs/ru/: architecture.md  client.md  faq.md  integrations.md  migration-v0.3.1.md  obfuscation.md  server.md  specification.md
netstack-smoltcp/src/: device.rs  runner.rs  tcp.rs
ostp/: Cargo.toml  build.rs
ostp-client/: Cargo.toml
ostp-client/src/: app.rs  bridge.rs  bridge.rs.bak  config.rs  ipc_crypto.rs  lib.rs  logging.rs  runner.rs  runner.rs.bak  signal.rs  sysproxy.rs  turn.rs
ostp-core/: Cargo.toml  build.rs
ostp-core/examples/: test_handshake.rs
ostp-core/src/: congestion.rs  dns.rs  dns_prober.rs  dnstt.rs  lib.rs  protocol.rs  relay.rs  resumption.rs
ostp-flutter/: pubspec.yaml  resize_icon.ps1
ostp-flutter/lib/: main.dart
ostp-flutter/test/: widget_test.dart
ostp-gui/: package-lock.json  package.json
ostp-gui/src/: i18n.js  index.html  main.js  styles.css
ostp-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ostp-gui/src-tauri/icons/: icon.icns
ostp-gui/src-tauri/permissions/: app-commands.toml
ostp-gui/src-tauri/src/: dns_prober.rs  ipc_crypto.rs  lib.rs  main.rs
ostp-jni/: Cargo.toml  OstpClientSdk.kt
ostp-jni/src/: lib.rs
ostp-server/: Cargo.toml
ostp-server/src/: api.rs  config.rs  dispatcher.rs  dns.rs  fallback.rs  lib.rs  license.rs  outbound.rs  relay.rs  relay_node.rs  router.rs  tui.rs
ostp-tun/: Cargo.toml
ostp-tun-helper/: Cargo.toml  build.rs
ostp-tun-helper/src/: main.rs
ostp-tun/src/: lib.rs  linux.rs  macos.rs  sys_win_api.rs  windows.rs  windows_route.rs
ostp-wiki/: DNS-Transport.md  README.md  api_endpoints.md  configuration_guide.md
ostp/src/: dns_prober.rs  main.rs
scripts/: build.ps1  bump_version.py  install.ps1  install.sh  test_linux.sh
(+56 files in other folders)
