[package]
name = "ostp-tun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tun = { version = "0.8.9", features = ["async"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["iphlpapi", "tcpmib", "processthreadsapi", "psapi", "handleapi", "winerror", "minwindef", "winnt", "iptypes", "ws2def"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
